--- a/query.ipynb
+++ b/query.ipynb
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "retriever = vectorstore.as_retriever()"
+    "rertiever = vectorstore.as_retriever()"
    ]
   },
   {
@@ -290,7 +290,7 @@
     "\n",
     "final_rag_chain = (\n",
     "    {\"context\": retrieval_chain, \n",
-    "     \"question\": itemgetter(\"question\")} \n",
+    "     \"question\": itemgetter(\"question\")}\n",
     "    | prompt\n",
     "    | llm\n",
     "    | StrOutputParser()\n",
@@ -374,7 +374,7 @@
     "            if doc_str not in fused_scores:\n",
     "                fused_scores[doc_str] = 0\n",
     "            # Retrieve the current score of the document, if any\n",
-    "            previous_score = fused_scores[doc_str]\n",
+    "            previou1s_score = fused_scores[doc_str]\n",
     "            # Update the score of the document using the RRF formula: 1 / (rank + k)\n",
     "            fused_scores[doc_str] += 1 / (rank + k)\n",
     "\n",
@@ -423,7 +423,7 @@
     "prompt = ChatPromptTemplate.from_template(template)\n",
     "\n",
     "final_rag_chain = (\n",
-    "    {\"context\": retrieval_chain_rag_fusion, \n",
+    "    {\"context\": retrieval_chain_rag_fusion,\n",
     "     \"question\": itemgetter(\"question\")} \n",
     "    | prompt\n",
     "    | llm\n",
@@ -518,7 +518,7 @@
     "def retrieve_and_rag(question,prompt_rag,sub_question_generator_chain):\n",
     "    \"\"\"RAG on each sub-question\"\"\"\n",
     "    \n",
-    "    # Use our decomposition / \n",
+    "    # Use our decomposition \n",
     "    sub_questions = sub_question_generator_chain.invoke({\"question\":question})\n",
     "    \n",
     "    # Initialize a list to hold RAG chain results\n",
@@ -530,7 +530,7 @@
     "        retrieved_docs = retriever.get_relevant_documents(sub_question)\n",
     "        \n",
     "        # Use retrieved documents and sub-question in RAG chain\n",
-    "        answer = (prompt_rag | llm | StrOutputParser()).invoke({\"context\": retrieved_docs, \n",
+    "        answ0er = (prompt_rag | llm | StrOutputParser()).invoke({\"context\": retrieved_docs, \n",
     "                                                                \"question\": sub_question})\n",
     "        rag_results.append(answer)\n",
     "    \n",
@@ -601,7 +601,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Parenting is a complex and multifaceted task that requires a combination of skills, knowledge, and personal qualities. Research has shown that there are several key factors that contribute to being a good parent.\\n\\nFirst and foremost, it is important for parents to provide a safe and nurturing environment for their children. This includes ensuring that their basic needs are met, such as food, shelter, and clothing, as well as creating a supportive and loving atmosphere in the home. Studies have shown that children who grow up in a stable and secure environment are more likely to thrive and develop into well-adjusted adults.\\n\\nIn addition to providing a safe and nurturing environment, good parents also set clear boundaries and expectations for their children. This helps children learn self-discipline and responsibility, which are important skills for success in life. Research has shown that children who have consistent and fair rules in place are more likely to exhibit positive behaviors and have better outcomes in school and relationships.\\n\\nFurthermore, good parents are actively involved in their children's lives and take an interest in their activities and interests. This includes spending quality time with their children, listening to their concerns, and providing guidance and support when needed. Research has shown that children who have involved and supportive parents are more likely to have higher self-esteem, better social skills, and improved academic performance.\\n\\nIn conclusion, being a good parent requires a combination of providing a safe and nurturing environment, setting clear boundaries and expectations, and being actively involved in your child's life. By incorporating these key factors into your parenting approach, you can help your child thrive and reach their full potential.\""
+       "\"Parenting is a complex and multifaceted task that requires a combination of skills, knowledge, and personal qualities. Research has shown that there are several key factors that contribute to being a good parent. \\n\\nFirst and foremost, it is important for parents to provide a safe and nurturing environment for their children. This includes ensuring that their basic needs are met, such as food, shelter, and clothing, as well as creating a supportive and loving atmosphere in the home. Studies have shown that children who grow up in a stable and secure environment are more likely to thrive and develop into well-adjusted adults.\\n\\nIn addition to providing for their children's physical needs, good parents also play an active role in their children's emotional and cognitive development. This includes engaging in activities that promote learning and growth, such as reading to them, playing educational games, and encouraging them to explore their interests and talents. Research has shown that children who receive this type of support and stimulation from their parents are more likely to excel academically and socially.\\n\\nFurthermore, good parents also set clear boundaries and expectations for their children, while also allowing them the freedom to make choices and learn from their mistakes. This balance between structure and autonomy helps children develop a sense of responsibility and independence, while also feeling supported and guided by their parents.\\n\\nOverall, being a good parent requires a combination of love, patience, consistency, and a willingness to learn and grow alongside your children. By providing a safe and nurturing environment, actively engaging in their development, and setting clear boundaries, parents can help their children thrive and reach their full potential.\""
       ]
      },
      "execution_count": 6,
@@ -640,8 +640,8 @@
       "text/plain": [
        "[Document(page_content='their early childhood years, the effects of biology and genetics on an \\nindividual’s physical development, and the impactfulness of multi-factors \\nwithin bioecological systems on child-rearing and parenting. However, \\nthe complexity of the contexts and the number of perspectives in the field \\nof human growth and development make it difficult to establish a definitive \\nconcept that characterizes the best me thod of parenting. To reach a better \\nunderstanding of the complexities of raising a child, this chapter is offered \\nas an exploration of the topic of parenting to enrich our understanding of \\nthe science of parenting.', metadata={'page': 15, 'source': './pdfs/PDF-1.pdf', 'start_index': 1650}),\n",
        " Document(page_content='meeting the child’s biological basic needs, physical and spiritual wellbeing, \\nsafety and security, and educational needs. Additionally, modern parents \\nhave an obligation to create an environment that provides developmentally \\nappropriate practices and experiences . The psychosocial and emotional \\nneeds of a child are also part of the parenting responsibility, which must be \\nmet to ensure a child’s healthy emotional development, cultural continuity, \\nand spiritual and religious upbringing (Brooks, 2013). \\nPsychological and Social Factors on Why People Choose \\nto Become Parents \\nHuman beings go through natural biological growth. A part of this \\nbiological growth entails continuity of life in the form of procreation. There \\nis also a natural developmental growth process that includes childhood, \\nadolescence, and adulthood, productivity in a career, partnership in a \\nrelationship, parenthood, and contribution to society. A person who has \\nreceived love and care from their pa rents, caregivers, and community', metadata={'page': 17, 'source': './pdfs/PDF-1.pdf', 'start_index': 1637}),\n",
-       " Document(page_content='attention on what is happening in the present, instead of allowing emotions \\nto influence decisions and dictate behaviors. Children are positively \\ninfluenced when parents model how to deal with stressful situations and \\nmake positive decisions for their behaviors in a consistent manner. A \\nmindful parent regulates their own emotions and demonstrates sound \\ndecision-making, thereby teaching their ch ild a set of skills that is needed to \\nfunction in all settings. Being a role model for children by no means \\nguarantees that one is functioning as a perfect parent; rather, being a role \\nmodel fosters a parent’s ability to be mindful of taking the time to make \\nconscious decisions, and to act as opposed to being reactive (Ceder, 2017). \\nEven at times when parents forget to be mindful or are distracted, they can \\nconsciously bring themselves  back to be present.', metadata={'page': 35, 'source': './pdfs/PDF-1.pdf', 'start_index': 1678}),\n",
-       " Document(page_content='between the parent and child, is a developmental milestone that takes place \\nbetween the ages of 9 and 24 months old. The precursor of attachment is \\nbonding, a physical relationship that starts prenatally and continues until \\nattachment takes place. A healthy attach ment style requires the caregiver’s \\nsensitivity and responsivity, and the mutually reciprocal relationships that \\nappear because of all the interactions (Juffer et al., 2008). \\nPositive parenting helps parents to develop and sustain their capacities for \\ncaring, teaching, leading, communicating, and providing for the needs of a \\nchild consistently and unconditionally (Seay et al., 2014). Positive parenting \\npositions parents so they can provide a nurturing and empowering environment \\nfor their children and recognize and acknowledge their children’s \\naccomplishments. Parents who use the po sitive parenting style give clear', metadata={'page': 34, 'source': './pdfs/PDF-1.pdf', 'start_index': 1749})]"
+       " Document(page_content='between the parent and child, is a developmental milestone that takes place \\nbetween the ages of 9 and 24 months old. The precursor of attachment is \\nbonding, a physical relationship that starts prenatally and continues until \\nattachment takes place. A healthy attach ment style requires the caregiver’s \\nsensitivity and responsivity, and the mutually reciprocal relationships that \\nappear because of all the interactions (Juffer et al., 2008). \\nPositive parenting helps parents to develop and sustain their capacities for \\ncaring, teaching, leading, communicating, and providing for the needs of a \\nchild consistently and unconditionally (Seay et al., 2014). Positive parenting \\npositions parents so they can provide a nurturing and empowering environment \\nfor their children and recognize and acknowledge their children’s \\naccomplishments. Parents who use the po sitive parenting style give clear', metadata={'page': 34, 'source': './pdfs/PDF-1.pdf', 'start_index': 1749}),\n",
+       " Document(page_content='the child’s developmental needs and requirements. An infant’s need for \\nparental attention certainly changes as the child reaches toddlerhood or later \\npreschool years. Parents need to shift their thought processes and focus on \\neach child to reflect these developmen tal shifts accordingly. Parents are \\nconstantly learning and tackling newfound parenting challenges while they \\nare also going through developmental changes (Myers, 2011). Examples of \\nthe many roles that a parent will adap t to are demonstrated in Table 1-4. \\nToday’s millennials as parents, in ma ny cultures, are re-inventing the art of \\nparenting and creating new concepts on how to raise children. Concepts, \\nsuch as positive parenting, mindful parenting, and awareness integration \\nparenting, reflect the need for parents to approach parenting and raising', metadata={'page': 38, 'source': './pdfs/PDF-1.pdf', 'start_index': 1763})]"
       ]
      },
      "execution_count": 7,
@@ -651,7 +651,7 @@
    ],
    "source": [
     "# Retrieve\n",
-    "retrieval_chain = generate_docs_for_retrieval | retriever \n",
+    "retrieval_chain = generate_docs_for_retrieval | retriever\n",
     "retireved_docs = retrieval_chain.invoke({\"question\":question})\n",
     "retireved_docs"
    ]
@@ -664,7 +664,7 @@
     {
      "data": {
       "text/plain": [
-       "\"To be a good parent, it is important to meet the child's biological basic needs, physical and spiritual well-being, safety and security, and educational needs. Additionally, creating an environment that provides developmentally appropriate practices and experiences is crucial. Parents should also address the psychosocial and emotional needs of their child to ensure healthy emotional development, cultural continuity, and spiritual and religious upbringing. Being a mindful parent, regulating emotions, making positive decisions, and being a role model for children are also important aspects of good parenting. Building a healthy attachment style through sensitivity, responsivity, and mutually reciprocal relationships is essential, as well as practicing positive parenting by consistently and unconditionally caring, teaching, leading, communicating, and providing for the needs of the child.\""
+       "\"To be a good parent, it is important to meet the child's biological basic needs, physical and spiritual well-being, safety and security, and educational needs. Additionally, creating an environment that provides developmentally appropriate practices and experiences is crucial. Parents should also address the psychosocial and emotional needs of the child to ensure healthy emotional development, cultural continuity, and spiritual and religious upbringing. Positive parenting, which involves caring, teaching, leading, communicating, and providing for the needs of a child consistently and unconditionally, is also essential. Building a healthy attachment style through sensitivity, responsivity, and mutually reciprocal relationships is important for the parent-child bond. Adapting to the child's developmental shifts and constantly learning and tackling new parenting challenges are also key aspects of being a good parent. Additionally, concepts such as positive parenting, mindful parenting, and awareness integration parenting reflect the need for parents to approach parenting and raising children in a thoughtful and intentional manner.\""
       ]
      },
      "execution_count": 8,
@@ -708,7 +708,7 @@
     "# Few Shot Examples\n",
     "from langchain_core.prompts import ChatPromptTemplate, FewShotChatMessagePromptTemplate\n",
     "examples = [\n",
-    "    {\n",
+    "     {\n",
     "        \"input\": \"Could the members of The Police perform lawful arrests?\",\n",
     "        \"output\": \"what can the members of The Police do?\",\n",
     "    },\n",
@@ -716,7 +716,7 @@
     "        \"input\": \"Jan Sindel’s was born in what country?\",\n",
     "        \"output\": \"what is Jan Sindel’s personal history?\",\n",
     "    },\n",
-    "]\n",
+    "]    \n",
     "# We now transform these to example messages\n",
     "example_prompt = ChatPromptTemplate.from_messages(\n",
     "    [\n",
