configure mongodb as vectorstore

--- a/query.ipynb
+++ b/query.ipynb
@@ -530,7 +530,7 @@
     "        retrieved_docs = retriever.get_relevant_documents(sub_question)\n",
     "        \n",
     "        # Use retrieved documents and sub-question in RAG chain\n",
-    "        answ0er = (prompt_rag | llm | StrOutputParser()).invoke({\"context\": retrieved_docs, \n",
+    "        answer = (prompt_rag | llm | StrOutputParser()).invoke({\"context\": retrieved_docs, \n",
     "                                                                \"question\": sub_question})\n",
     "        rag_results.append(answer)\n",
     "    \n",
