--- a/mongoDB_query.ipynb
+++ b/mongoDB_query.ipynb
@@ -14,9 +14,24 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
     "os.environ['LANGCHAIN_TRACING_V2'] = 'true'\n",
-    "os.environ['LANGCHAIN_ENDPOINT'] = 'https://api.smith.langchain.com'\n",
-    "os.environ[\"LANGCHAIN_PROJECT\"]=\"Foojan-MIRA\""
+    "os.environ['LANGCHAIN_ENDPOINT'] = 'https://api.smith.langchain.com'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "os.environ[\"LANGCHAIN_PROJECT\"]= os.getenv('LANGCHAIN_PROJECT')\n",
+    "os.environ[\"OPENAI_API_KEY\"] = os.getenv('OPENAI_API_KEY')\n",
+    "os.environ[\"GOOGLE_API_KEY\"] = os.getenv('GOOGLE_API_KEY')\n",
+    "os.environ[\"LANGCHAIN_API_KEY\"] = os.getenv('LANGCHAIN_API_KEY')"
    ]
   },
   {
@@ -28,16 +43,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "MONGODB_ATLAS_CLUSTER_URI = os.getenv('MONGODB_ATLAS_CLUSTER_URI')\n",
+    "DB_NAME = os.getenv('DB_NAME')\n",
+    "COLLECTION_NAME = os.getenv('COLLECTION_NAME')\n",
+    "ATLAS_VECTOR_SEARCH_INDEX_NAME = os.getenv('ATLAS_VECTOR_SEARCH_INDEX_NAME')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,16 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Suffering is a complex and multifaceted experience that can manifest in physical, emotional, and psychological forms. In order to effectively release suffering, it is important to understand the underlying causes and mechanisms that contribute to its presence. One approach to releasing suffering is through the practice of mindfulness and meditation. By cultivating present moment awareness and non-judgmental acceptance of one's experiences, individuals can learn to observe their suffering without becoming overwhelmed by it. This can help to reduce the intensity of suffering and create space for healing and transformation.\\n\\nAnother approach to releasing suffering is through the use of cognitive-behavioral techniques. By identifying and challenging negative thought patterns and beliefs that contribute to suffering, individuals can learn to reframe their experiences in a more positive and empowering way. This can help to shift their perspective and reduce the emotional impact of their suffering.\\n\\nAdditionally, seeking support from mental health professionals, such as therapists or counselors, can be beneficial in releasing suffering. These professionals can provide guidance, validation, and tools for coping with and overcoming suffering. They can also help individuals explore the root causes of their suffering and develop strategies for addressing them.\\n\\nIn conclusion, releasing suffering is a complex and individualized process that may require a combination of approaches. By cultivating mindfulness, challenging negative thought patterns, and seeking support from mental health professionals, individuals can learn to release their suffering and move towards a place of healing and well-being.\""
+       "\"Suffering is a complex and multifaceted experience that can manifest in physical, emotional, and psychological forms. In order to effectively release suffering, it is important to understand the underlying causes and mechanisms that contribute to its presence. \\n\\nOne approach to releasing suffering is through mindfulness-based practices, such as meditation and deep breathing exercises. These techniques can help individuals cultivate a sense of presence and awareness, allowing them to observe their suffering without becoming overwhelmed by it. By developing a non-judgmental attitude towards their suffering, individuals can begin to unravel the layers of pain and discomfort that contribute to their overall sense of distress. \\n\\nAnother important aspect of releasing suffering is through the cultivation of self-compassion and self-care. By treating oneself with kindness and understanding, individuals can begin to address the root causes of their suffering and develop healthier coping mechanisms. This may involve seeking support from loved ones, engaging in therapy, or participating in activities that bring joy and fulfillment. \\n\\nIn addition, it is important to address any underlying physical or mental health issues that may be contributing to one's suffering. Seeking professional help from a healthcare provider or therapist can provide valuable insights and resources for managing and alleviating suffering. \\n\\nUltimately, releasing suffering is a deeply personal and individualized process that may require a combination of approaches. By cultivating mindfulness, self-compassion, and seeking appropriate support, individuals can begin to release the grip of suffering and move towards a place of healing and well-being.\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
