--- a/mongoDB.ipynb
+++ b/mongoDB.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,11 +69,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.embeddings.openai import OpenAIEmbeddings\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
     "\n",
     "embeddings = OpenAIEmbeddings(model='text-embedding-ada-002')\n"
    ]
@@ -78,66 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Ignoring wrong pointing object 13 0 (offset 0)\n",
-      "Ignoring wrong pointing object 20 0 (offset 0)\n",
-      "Ignoring wrong pointing object 28 0 (offset 0)\n",
-      "Ignoring wrong pointing object 30 0 (offset 0)\n",
-      "Ignoring wrong pointing object 41 0 (offset 0)\n",
-      "Ignoring wrong pointing object 55 0 (offset 0)\n",
-      "Ignoring wrong pointing object 66 0 (offset 0)\n",
-      "Ignoring wrong pointing object 109 0 (offset 0)\n",
-      "Ignoring wrong pointing object 155 0 (offset 0)\n",
-      "Ignoring wrong pointing object 157 0 (offset 0)\n",
-      "Ignoring wrong pointing object 159 0 (offset 0)\n",
-      "Ignoring wrong pointing object 15 0 (offset 0)\n",
-      "Ignoring wrong pointing object 17 0 (offset 0)\n",
-      "Ignoring wrong pointing object 19 0 (offset 0)\n",
-      "Ignoring wrong pointing object 26 0 (offset 0)\n",
-      "Ignoring wrong pointing object 28 0 (offset 0)\n",
-      "Ignoring wrong pointing object 41 0 (offset 0)\n",
-      "Ignoring wrong pointing object 43 0 (offset 0)\n",
-      "Ignoring wrong pointing object 61 0 (offset 0)\n",
-      "Ignoring wrong pointing object 94 0 (offset 0)\n",
-      "Ignoring wrong pointing object 181 0 (offset 0)\n",
-      "Ignoring wrong pointing object 191 0 (offset 0)\n",
-      "Ignoring wrong pointing object 216 0 (offset 0)\n",
-      "Ignoring wrong pointing object 218 0 (offset 0)\n",
-      "Ignoring wrong pointing object 220 0 (offset 0)\n",
-      "Ignoring wrong pointing object 226 0 (offset 0)\n",
-      "Ignoring wrong pointing object 241 0 (offset 0)\n",
-      "Ignoring wrong pointing object 284 0 (offset 0)\n",
-      "Ignoring wrong pointing object 381 0 (offset 0)\n",
-      "Ignoring wrong pointing object 729 0 (offset 0)\n",
-      "Ignoring wrong pointing object 731 0 (offset 0)\n",
-      "Ignoring wrong pointing object 733 0 (offset 0)\n",
-      "Ignoring wrong pointing object 735 0 (offset 0)\n",
-      "Ignoring wrong pointing object 932 0 (offset 0)\n",
-      "Ignoring wrong pointing object 934 0 (offset 0)\n",
-      "Ignoring wrong pointing object 936 0 (offset 0)\n",
-      "Ignoring wrong pointing object 991 0 (offset 0)\n",
-      "Ignoring wrong pointing object 6 0 (offset 0)\n",
-      "Ignoring wrong pointing object 19 0 (offset 0)\n",
-      "Ignoring wrong pointing object 21 0 (offset 0)\n",
-      "Ignoring wrong pointing object 26 0 (offset 0)\n",
-      "Ignoring wrong pointing object 28 0 (offset 0)\n",
-      "Ignoring wrong pointing object 34 0 (offset 0)\n",
-      "Ignoring wrong pointing object 39 0 (offset 0)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "899"
+       "1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,26 +104,26 @@
    "source": [
     "import os\n",
     "from langchain_community.document_loaders import PyPDFLoader\n",
-    "pdfs = os.listdir('./pdfs')\n",
+    "pdfs = os.listdir('./training')\n",
     "documents = []\n",
     "for pdf in pdfs:\n",
-    "    loader = PyPDFLoader(f'./pdfs/{pdf}')\n",
+    "    loader = PyPDFLoader(f'./training/{pdf}')\n",
     "    pages = loader.load_and_split()\n",
     "    documents.extend(pages)\n",
     "    \n",
-    "len(documents)"
+    "len(documents)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2663\n"
+      "5\n"
      ]
     }
    ],
@@ -178,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
