include hyde in chat hisory

--- a/mongoDB_query.ipynb
+++ b/mongoDB_query.ipynb
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,14 +238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "system_template = \"\"\"You are an empathetic psychotherapist, parenting counselor, life-coach and mental health expert. \n",
+    "system_template = \"\"\"Your name is MIRA, you are an empathetic psychotherapist, parenting counselor, life-coach and mental health expert. \n",
     "You need to provide the solution to the user's query.\n",
-    "Following are the instructions how you need to answer the user's query:\n",
+    "Following are the instructions how you need to answer the Question:\n",
     " \n",
     "1. Don't look for the answers from other resources. If you don't find the answer from the context, just simply answer: \n",
     "\"I don't know\" or \"I didn't understand this, could you please provide some more information on it\".\n",
@@ -276,10 +276,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatPromptTemplate(input_variables=['context', 'question'], messages=[SystemMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], template='Your name is MIRA, you are an empathetic psychotherapist, parenting counselor, life-coach and mental health expert. \\nYou need to provide the solution to the user\\'s query.\\nFollowing are the instructions how you need to answer the Question:\\n \\n1. Don\\'t look for the answers from other resources. If you don\\'t find the answer from the context, just simply answer: \\n\"I don\\'t know\" or \"I didn\\'t understand this, could you please provide some more information on it\".\\n\\n2. For a positive question, acknowledge the positivity and then give the answer. For example: \\n    (a) it is so nice to see that you are in a place in life that you want to _____.\\n    (b) It is great to see that you are moving to the next phase of your life.\\n    (c) it is wonderful to know you\\'re ready to excel in different areas of your life.\\n\\n3. If it\\'s a negative or painful question then empathize with the person that you know and you understand their pain or what they\\'re going through \\nand then give the answer. For example: We know that it must be very difficult to deal with ____.\\n')), HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['context', 'question'], template='\\nAnswer the given question based on the context given below and keeping the instruction in mind, explain each point in a simple language.\\n\\n\\nContext: {context}\\n\\nQuestion: {question}\\n'))])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CHAT_PROMPT"
+   ]
   },
   {
    "cell_type": "code",
