--- a/mongoDB.ipynb
+++ b/mongoDB.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "'test'"
+       "'embeddings'"
       ]
      },
      "execution_count": 5,
@@ -107,16 +107,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "540"
+       "196"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,28 +136,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1449\n"
+      "443\n"
      ]
     }
    ],
    "source": [
     "from langchain_text_splitters import RecursiveCharacterTextSplitter  # This splitter splits the chunks from the end of the line\n",
     "\n",
-    "text_splitter = RecursiveCharacterTextSplitter(chunk_size = 1000, chunk_overlap = 200, add_start_index = True)\n",
+    "text_splitter = RecursiveCharacterTextSplitter(chunk_size = 2000, chunk_overlap = 200, add_start_index = True)\n",
     "chunks = text_splitter.split_documents(documents)\n",
     "print(len(chunks))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
